fixed input glitch on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -263,5 +263,8 @@ input[type=text] {
     #container{
         overflow: hidden;
     }
+    input[type=text]:focus {
+        width: 50%;
+    }
     
 }
